Tweaks to the README

--- a/README
+++ b/README
@@ -1,1 +1,8 @@
-This file was created by IntelliJ IDEA 12.1.3 for binding GitHub repository
+Experimental editor for AsciiDoc documents, with rendering preview, built with Griffon and GroovyFX.
+
+Project developed during the Hackergarten session, at GR8Conf Euope 2013, with the participation of:
+* Andrés Almiray
+* Stephen Chin
+* Jörg Gellien
+* Guillaume Laforge
+* Jochen Theodorou
