Tweaks to the README to make it an AsciiDoc file

--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,5 @@
+= README
+
 Experimental editor for AsciiDoc documents, with rendering preview, built with Griffon and GroovyFX.
 
 Project developed during the Hackergarten session, at GR8Conf Euope 2013, with the participation of:
